# WinPdfGenerator

./: .gitattributes  .gitignore  LICENSE  README.md  plan.md
.github/: FUNDING.yml
.zed/: tasks.json
sample/SampleCppCLI/: CMakeLists.txt  build.bat  main.cpp  winpdfgenerator.h
sample/SampleOdinCLI/: api.odin  bindings.odin  document.odin  file.odin  filters.odin  graphics.odin  image_xobjects.odin  interactive.odin  main.odin  text_fonts.odin  types.odin
sample/SampleSimple/: bindings.odin  main.odin
winpdfgenerator/: api.odin  color.odin  core.odin  document.odin  encryption_security.odin  file.odin  filters.odin  functions.odin  graphics.odin  icc_profiles.odin  image_xobjects.odin  interactive.odin  metadata.odin  object_stream.odin  patterns.odin  signatures.odin  text_fonts.odin  transparency.odin  types.odin  xref_stream.odin
